[tool.poetry]
name = "stepwise-studio"
version = "1.0.0"
description = "Python dependencies for Stepwise Studio yt-dlp functionality"
authors = ["Stepwise Studio <hello@stepwise.studio>"]

[tool.poetry.dependencies]
python = "^3.9"
certifi = "^2023.0.0"
urllib3 = "^2.0.0"
brotli = "^1.0.0"
mutagen = "^1.46.0"
pycryptodome = "^3.18.0"
websockets = "^11.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"